# Task-Qianbo

./: .gitignore  main.py  main_task1.py  main_task2.py  main_task3.py  main_task4_1.py  main_task4_2.py  main_task5.py  pyproject.toml  readme.md  visual_lmo_pose.py  visual_lmo_segmentation.py
lmo_occlusion/: results.json
lmo_pose_analysis/: matched_data.csv  results.json
